<resources>
    <string name="app_name">Restaurant Researcher</string>
    <string name="drawer_open">Drawer_Open</string>
    <string name="drawer_close">Drawer_Close</string>
    <string name="textView">"TextView&#x0A;"</string>
    <string name="address">"　住所 :&#x0A;"</string>
    <string name="access">"　アクセス：&#x0A;　"</string>
    <string name="dayTime">"　営業時間、曜日：&#x0A;　"</string>
    <string name="dayOff">"　定休日：&#x0A;　"</string>
    <string name="enviroment">"　通信環境、Wi-Fi:&#x0A;　"</string>
    <string name="privateRoom">"　個室：&#x0A;　"</string>
    <string name="budget">"　予算：&#x0A;　"</string>
    <string name="creditCard">"　クレジットカード：&#x0A;　"</string>
    <string name="memo">"　メモ：&#x0A;　"</string>
    <string name="url">"　お店URL：&#x0A;　"</string>
    <string name="backButton">"　戻る　"</string>


</resources>
