<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.roy1473.restaurantexample.DetailActivity">


    <ScrollView
        android:layout_width="368dp"
        android:layout_height="495dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/backButton"
                android:onClick="onBackButtonTapped"
                android:text="@string/backButton"/>




            <TextView
                android:id="@+id/title"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal|center"
                android:text="@string/textView"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="16dp" />

            <ImageView
                android:id="@+id/photo"
                android:layout_width="368dp"
                android:layout_height="158dp"
                app:srcCompat="@mipmap/ic_launcher"
                android:contentDescription="@string/textView"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="91dp" />


            <TextView
                android:id="@+id/catches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal|center"
                android:text="@string/textView"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="16dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/address"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:text="@string/textView"
                android:textColor="@android:color/black"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="16dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/access"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="16dp"/>

            <TextView
                android:id="@+id/access"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView"
                android:textColor="@android:color/black"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="16dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dayTime"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/open"
                android:text="@string/textView"
                android:textColor="@android:color/black"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dayOff"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView"
                android:id="@+id/close"
                android:textColor="@android:color/black"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="16dp"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="16dp"
                android:text="@string/enviroment" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/wifi"
                android:text="@string/textView"
                android:textColor="@android:color/black"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY= "16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privateRoom"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY= "16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/privateRoom"
                android:text="@string/textView"
                android:textColor="@android:color/black"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY= "16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/budget"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY= "16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/budget"
                android:text="@string/textView"
                android:textColor="@android:color/black"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY= "16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/creditCard"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY= "16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card"
                android:text="@string/textView"
                android:textColor="@android:color/black"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY= "16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/memo"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY= "16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView"
                android:textColor="@android:color/black"
                android:id="@+id/about"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY= "16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/url"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY= "16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView"
                android:textColor="@android:color/black"
                android:id="@+id/url"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY= "16dp"/>



            </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
